[package]
name = "httptest"
version = "0.10.0"
authors = ["Glenn Griffin <ggriffiniii@gmail.com>"]
edition = "2018"
description = "HTTP testing facilities including a mock server"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/httptest"
repository = "https://github.com/ggriffiniii/httptest"
homepage = "https://github.com/ggriffiniii/httptest"
readme = "README.md"
keywords = ["http", "test", "testing", "mock", "fake"]

[package.metadata.release]
no-dev-version = true

[dependencies]
bytes = "0.5"
hyper = "0.13"
futures = "0.3"
tokio = { version = "0.2.5", features = ["macros", "blocking", "rt-threaded"] }
crossbeam-channel = "0.4.0"
http = "0.2"
log = "0.4.8"
bstr = "0.2.8"
regex = "1.3.1"
url = "2.1.0"
serde_json = "1.0.44"
serde = "1"
serde_urlencoded = "0.6.1"
once_cell = "1.2.0"

[dev-dependencies]
pretty_env_logger = "0.3.1"
crossbeam-utils = "0.7.0"
serde = { version = "1", features = ["derive"] }
