[package]
name = "httptest"
version = "0.15.2"
authors = ["Glenn Griffin <ggriffiniii@gmail.com>"]
edition = "2018"
description = "HTTP testing facilities including a mock server"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/httptest"
repository = "https://github.com/ggriffiniii/httptest"
homepage = "https://github.com/ggriffiniii/httptest"
readme = "README.md"
keywords = ["http", "test", "testing", "mock", "fake"]

[package.metadata.release]
no-dev-version = true

[dependencies]
bytes = "1.0"
hyper = { version = "0.14", features = ["http1", "http2", "server", "tcp"] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "time"] }
crossbeam-channel = "0.5.0"
http = "0.2"
log = "0.4.8"
bstr = "0.2.8"
regex = "1.3.1"
form_urlencoded = "1.0"
serde_json = "1.0.44"
serde = "1"
serde_urlencoded = "0.7"
once_cell = "1.2.0"

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
pretty_env_logger = "0.4"
crossbeam-utils = "0.8.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
