[package]
name = "httptest"
version = "0.16.1"
authors = ["Glenn Griffin <ggriffiniii@gmail.com>"]
edition = "2018"
description = "HTTP testing facilities including a mock server"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/httptest"
repository = "https://github.com/ggriffiniii/httptest"
homepage = "https://github.com/ggriffiniii/httptest"
readme = "README.md"
keywords = ["http", "test", "testing", "mock", "fake"]

[dependencies]
bytes = "1.6"
hyper = { version = "1.2", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["http1", "http2", "server", "tokio"] }
http-body-util = "0.1"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "time"] }
crossbeam-channel = "0.5.12"
http = "1.1"
log = "0.4.21"
bstr = "1.9.1"
regex = "1.10.4"
form_urlencoded = "1.2"
serde_json = "1.0"
serde = "1"
serde_urlencoded = "0.7"
once_cell = "1.19.0"

[dev-dependencies]
hyper = { version = "1.2", features = ["full"] }
hyper-util = { version = "0.1", features = ["http1", "http2", "client", "tokio", "client-legacy"] }
pretty_env_logger = "0.5"
crossbeam-utils = "0.8.19"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.37", features = ["rt-multi-thread"] }
