[package]
name = "httptest_core"
version = "0.1.1"
authors = ["Glenn Griffin <ggriffiniii@gmail.com>"]
edition = "2018"
description = "Core traits for httptest"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/httptest"
repository = "https://github.com/ggriffiniii/httptest"
homepage = "https://github.com/ggriffiniii/httptest"

[package.metadata.release]
no-dev-version = true

[dependencies]
http = "0.2"
