[package]
name = "httptest_server"
version = "0.1.0"
authors = ["Glenn Griffin <ggriffiniii@gmail.com>"]
edition = "2018"
description = "The server implementation for httptest"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/httptest"
repository = "https://github.com/ggriffiniii/httptest"
homepage = "https://github.com/ggriffiniii/httptest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httptest_core = { version = "0.1", path = "../httptest_core" }
hyper = "0.13"
http = "0.2"
tokio = "0.2"
futures = "0.3"
log = "0.4"